2002-12-27  Gregory John Casamento <greg_casamento@yahoo.com>

	* Added TODO file to document interesting feature suggestions
	and bugs which need to be fixed.
	
2002-12-27  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: -[GormObjectProxy inspectorClassName]: returns
	GormNotApplicableInspector, since we shouldn't be able to directly
	change any of the attributes on a GormObjectProxy.
	
2002-12-27  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument parseHeader:] added code to select
	the class when it is loaded in the classes view.  Also modified the
	-[GormDocument _selectClass:] method and added a new private method
	-[GormDocument _selectClassWithObject:] which will select using an
	object which is passed in.
	
2002-12-27  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument parseHeader:] corrected problem
	pointed out be Enrico Sersale.   Applied patch.  Thanks!
	
2002-12-21  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added code in loadDocument: to create an empty
	dictionary for custom classes.  Corrected problem in createClassFiles:
	which prevented writing files when the class wasn't being edited.
	General cleanup.
	
2002-12-15  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Changed NSLog to NSDebugLog.
	* GormCustomClassInspector.m: Changed NSLog calls to NSDebugLog.
	* GormDocument.m: Changed NSLog calls to NSDebugLog where appropriate.
	* GormOutlineView.m: removed some uneeded NSLog calls.
	
2002-12-15  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Gorm.m: Minor cleanup.
	* GormClassManager.[hm]: Added method to get all superclasses
	of a given class.  Moved the "correctClassName" method which maps
	names of internal classes to thier external exquivalents.
	* GormCustomClassInspector.m: Made changes to call new class method
	in GormClassManager.
	* GormDocument.m: Minor cleanup.  Addition of _selectClass method